atualização do video2

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <a href="#contato" class="inline-block bg-transparent border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-black transition-all duration-300 shadow-lg">Solicite seu Cardápio</a>
             </div>
             <div class="md:w-1/2 flex justify-center fade-in">
-                <video class="rounded-xl shadow-2xl w-full max-w-md object-cover" autoplay muted loop poster="https://placehold.co/600x400/38a169/ffffff?text=Projeto+Nutricional+1">
-                    <source src="video2.mp4" type="video/mp4">
+                <video class="rounded-xl shadow-2xl w-full max-w-md object-cover" autoplay muted loop poster= "video2.mp4"
+                  src="video2.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
