--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </svg>
             </button>
         </div>
-        <!-- Menu Mobile (oculto por padrão) -->
+        <!-- Menu Mobile -->
         <div id="mobile-menu" class="hidden md:hidden">
             <a href="#detalhes" class="block py-2 px-6 text-sm text-white hover:bg-white/10">Detalhes</a>
             <a href="#projeto-em-ação" class="block py-2 px-6 text-sm text-white hover:bg-white/10">Projeto em ação</a>
@@ -64,8 +64,8 @@
                 <a href="#contato" class="inline-block bg-transparent border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-red-600 transition-all duration-300 shadow-lg">Solicite seu Cardápio</a>
             </div>
             <div class="md:w-1/2 flex justify-center fade-in">
-                <video class="rounded-xl shadow-2xl w-full max-w-md object-cover" autoplay muted loop poster="https://placehold.co/600x400/e53e3e/ffffff?text=Video+do+Projeto">
-                  <source src="video2.mp4" type="video/mp4">
+                <video class="rounded-xl shadow-2xl w-full max-w-md object-cover"
+                  src="video2.mp4" type="video/mp4">
                   Seu navegador não suporta o vídeo.
                 </video>
             </div>
