atualização de video

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto - Cardápio Mexicano</title>
+    <title>Projeto 7- Cardápio Mexicano</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -64,9 +64,9 @@
                 <a href="#contato" class="inline-block bg-transparent border-2 border-white text-white px-8 py-3 rounded-full font-semibold hover:bg-white hover:text-red-600 transition-all duration-300 shadow-lg">Solicite seu Cardápio</a>
             </div>
             <div class="md:w-1/2 flex justify-center fade-in">
-                <video class="rounded-xl shadow-2xl w-full max-w-md object-cover"
-                  src="video2.mp4" type="video/mp4">
-                  Seu navegador não suporta o vídeo.
+              <video class="rounded-xl shadow-2xl w-full max-w-md object-cover" autoplay muted loop>
+               <source src="video2.mp4" type="video/mp4">
+               </video>
                 </video>
             </div>
         </div>
@@ -102,13 +102,13 @@
             <h2 class="text-3xl font-bold text-white mb-10 text-center fade-in">Projeto em Ação</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 fade-in">
                 <div class="overflow-hidden rounded-lg shadow-lg group">
-                    <img src="https://i.ibb.co/VY855Qr1/Whats-App-Image-2025-07-12-at-21-02-36.jpg" alt="Foto 1" class="object-cover w-full h-64 transform transition-transform duration-500 group-hover:scale-110">
+                    <img src="https://i.ibb.co/VY855Qr1/Whats-App-Image-2025-07-12-at-21-02-36.jpg" alt="Foto 1" class="object-cover w-full h-64">
                 </div>
                 <div class="overflow-hidden rounded-lg shadow-lg group">
-                    <img src="https://i.ibb.co/q3qDNKSB/Whats-App-Image-2025-07-12-at-20-52-29.jpg" alt="Foto 2" class="object-cover w-full h-64 transform transition-transform duration-500 group-hover:scale-110">
+                    <img src="https://i.ibb.co/q3qDNKSB/Whats-App-Image-2025-07-12-at-20-52-29.jpg" alt="Foto 2" class="object-cover w-full h-64">
                 </div>
                 <div class="overflow-hidden rounded-lg shadow-lg group">
-                    <img src="https://i.ibb.co/fzWyG6vj/b3483934-2cd4-4bde-9a21-ac687a2dff6e.png" alt="Foto 3" class="object-cover w-full h-64 transform transition-transform duration-500 group-hover:scale-110">
+                    <img src="https://i.ibb.co/fzWyG6vj/b3483934-2cd4-4bde-9a21-ac687a2dff6e.png" alt="Foto 3" class="object-cover w-full h-64">
                 </div>
             </div>
         </div>
