atualização de link

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <li><span class="text-amber-500 font-semibold">✔️</span> Animações dinâmicas durante a rolagem.</li>
                     <li><span class="text-amber-500 font-semibold">✔️</span> Design 100% responsivo para celulares e tablets.</li>
                 </ul>
-                <a href="https://tarxdev.github.io/Projeto-7-Cardapio-Mexicano/" target="_blank" class="inline-block mt-6 bg-amber-500 text-white px-6 py-2 rounded-full font-semibold hover:bg-amber-600 transition">
+                <a href="https://tarxdev.github.io/Cardapio/" target="_blank" class="inline-block mt-6 bg-amber-500 text-white px-6 py-2 rounded-full font-semibold hover:bg-amber-600 transition">
                     Acesse o site do projeto
                 </a>
             </div>
